# flask-desktop-ui

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
examples/: farmer.py  hello_world.py  template_example.py
examples/static_farmer/: index.html  wife_searcher.js
examples/templates/: os_info.html
src/: chromium_browser.py  flask_desktop_ui.py
src/flask_desktop_ui/: __init__.py
test/: test_chromium_browser.py  test_flask_desktop_ui.py
