[metadata]
name = Flask Desktop UI
version = 1.0
description = Desktop web user interface using Flask APP as backend

[options]
package_dir =
  = src

packages = find:


python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <3.8
install_requires =
  cefpython3
  flask


[options.extras_require]
testing =
  flake8
  pytest
  mock
