[metadata]
name = flask-desktop-ui
version = 0.2
description = Desktop web user interface using Flask APP as backend
long_description = file: README.md
long_description_content_type = text/markdown

author = Javier Moragón
author_email = jamofer@gmail.com
url = https://github.com/jamofer/flask-desktop-ui

classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Desktop Environment
  Topic :: Internet
  Topic :: Internet :: WWW/HTTP
  Topic :: Internet :: WWW/HTTP :: Browsers
  Topic :: Software Development :: User Interfaces


[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <3.8
install_requires =
  cefpython3
  flask

package_dir =
  = src
packages = find:

[options.packages.find]
where=src


[options.extras_require]
testing =
  flake8
  pytest
  mock
